--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Hi, I'm Habot.</h1>
-<h2> A bot coach to help you create habits </h2>
+<h1><i>Hi, I'm HaBot.</i></h1>
+<h2> I'm a coach to help you create habits </h2>
 <h3> Let's get started! What's your phone number? </h3>
 
 <form action='/verify', method='GET'>
