--- a/templates/factors.html
+++ b/templates/factors.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2> Tell me how you're doing right now </h2>
+<h2> In order for me to recommend the best habits for you, tell me how you're doing right now </h2>
 
 <form action='/signup' method='GET'>
 
