--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1><i>Hi, I'm HaBot.</i></h1>
-<h2> I'm a coach to help you create habits </h2>
-<h3> Let's get started! What's your phone number? </h3>
+<h1>Hi, I'm HaBot.</h1>
+<h2> I help you create new habits</h2>
+<h2> What's your phone number? </h2>
 
 <form action='/verify', method='GET'>
     <select name="country_code">
