--- a/templates/time.html
+++ b/templates/time.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>What time do you want to do that?</h1>
+<h2>Great choice! Approximately what time do you plan on doing that new habit? I'll check in with you at that time.</h2>
+
 
 
 {% if hour == 0 %} selected="selected" {% endif %}
