--- a/templates/timezone.html
+++ b/templates/timezone.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1> what time zone are you in? </h1>
+<h1> Lovely part of the world! What timezone specifically?</h1>
 
 
 {% for timezone in timezones %}
