--- a/templates/name.html
+++ b/templates/name.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>What should we call you?</h1>
+<h2>What's your name?</h2>
 
 <form action='/timezone', method='GET'>
     <input type='text' name='name'>
