rearranged onboarding flow (tz first step), refined logic for response message logic

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -2,10 +2,11 @@
 {% block content %}
 
 <h2>Let's do this, {{ habit.user.name }}!</h2>
-<h2>I've already sent you a few messages to your mobile phone. <br>
-    I'll send you your first reminder at the time you selected for you to track your success</h2>
-<h1>In the meantime, check out this cool <a href="/dashboard">dashboard</a> that helps you track your streaks</h1>
-<h1>And you can text me at anytime just to let me know how you are - I can't wait to hear from you!</h1>
+<h2>I've already sent you a few texts. <br>
+    I'll send your first reminder at the time you selected for you to track your success</h2>
+<h4>In the meantime, check out this cool <a href="/dashboard">dashboard</a> that helps you track your streaks<br><br>Text me anytime, even just to let me know how you're doing - I can't wait to hear from you!</h4>
+
+<br><br><br><br><br>
 
 <p>debugging data</p>
 <p>your mobile: {{ habit.user.mobile }} </p>
