--- a/templates/factors.html
+++ b/templates/factors.html
@@ -5,8 +5,7 @@
 
 <form action='/signup' method='GET'>
 
-    <h3>Mind</h4>
-    <p>Your overall mood and emotional health.</p>
+    <p><b>Mind: </b>Your overall mood and emotional health.</p>
 
     <fieldset id="1">
 
@@ -41,8 +40,7 @@
 
     </fieldset>
 
-    <h3>Sleep</h4>
-    <p>The quality and quantity of your sleep</p>
+    <p><b>Sleep: </b>The quality and quantity of your sleep</p>
 
     <fieldset id="2">
 
@@ -77,9 +75,7 @@
 
     </fieldset>
 
-
-    <h3>Relationships</h4>
-    <p>The health of relationships important to you.</p>
+    <p><b>Relationships: </b>The health of relationships important to you.</p>
 
     <fieldset id="3">
 
@@ -114,9 +110,7 @@
 
     </fieldset>
 
-
-    <h3>Performance</h4>
-    <p>Your cognitive focus and decision making.</p>
+    <p><b>Performance: </b>Your cognitive focus and decision making.</p>
 
     <fieldset id="4">
 
@@ -151,8 +145,7 @@
 
     </fieldset>
 
-    <h3>Movement</h4>
-    <p>The amount of exercises you are getting.</p>
+    <p><b>Movement: </b>The amount of exercises you are getting.</p>
 
     <fieldset id="5">
 
@@ -187,8 +180,7 @@
 
     </fieldset>
 
-    <h3>Nutrition</h4>
-    <p>Your overall nutrition and hydration. </p>
+    <p><b>Nutrition: </b>Your overall nutrition and hydration. </p>
 
     <fieldset id="6">
 
