--- a/templates/name.html
+++ b/templates/name.html
@@ -3,7 +3,7 @@
 
 <h2>What's your name?</h2>
 
-<form action='/timezone', method='GET'>
+<form action='/factors', method='GET'>
     <input type='text' name='name'>
     <input type='submit' value='thats me!'>
 </form>
