--- a/templates/time.html
+++ b/templates/time.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2>Great choice! Approximately what time do you plan on doing that new habit? I'll check in with you at that time.</h2>
+<h2>Great choice! <br>
+    Approximately what time do you plan on doing that? <br>
+    I'll check in with you at that time.</h2>
 
 
 
