--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2> Here are some habits I'd recommend for you based on how things are going for you right now</h2>
+<h2> Here are some habits I'd recommend for you <br> 
+    based on how things are going for you right now</h2>
 
 <div id='habits-div'>
     <form id='rec-form' action='/time' method='GET'>
