--- a/templates/verification.html
+++ b/templates/verification.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>I've sent you a code to verify that's you. When you receive it, enter it here.</h1>
+<h2>I've sent you a code to verify your number. <br>
+    When you receive it, enter it here.</h2>
 
 <ul>
 {% for message in get_flashed_messages() %}
