texts working with emojis, preparations for working on styling onboarding flow elements

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,16 +106,19 @@
   opacity: 1;
 }
 
-/*input.habit {
-  width: 100px;
-  height: 100px;
-}*/
+input.habit {
+  width: 200px;
+  height: 400px;
+}
 
     </style>
 
 </head>
 
 <body>
+<div id='logo'>
+  <img src='/logo.png'>
+</div>
 
 {% block content %}
 
