habit button styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,16 +108,17 @@
 
 input.habit {
   width: 200px;
-  height: 400px;
+  height: 200px;
+  word-wrap: break-word;
 }
-
     </style>
 
 </head>
 
 <body>
-<div id='logo'>
-  <img src='/logo.png'>
+
+<div id="logo">
+  <img src="logo.png">
 </div>
 
 {% block content %}
