several bug fixes: 1. logic for streak tracking (scenario of multiple streaks after a long break, 2. forms submitting many habit_ids + added several bootstrap emlements in preparation for more design work tomorrow

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -3,14 +3,16 @@
 
 <h2>Which habit would you like to work on?</h2>
 
+<div class='form-inline'>
 {% for habit in habits %}
 <form action='/time' method='GET'>
-<div>
+<div id='habit-tile'>
     <input type="hidden" name="habit_id" value="{{ habit.create_habit_id }}">
-    <input class="habit" type='submit', value="{{ habit.title }}: {{ habit.description }}">
+    <input class="habit" type='submit' value="{{ habit.title }}: {{ habit.description }}">
 </div>
 </form>
 {% endfor %}
+</div>
 
 
 {% endblock %}
