--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,10 @@
 <!doctype html>
-<html>
+<html lang='en'>
 <head>
     <title>habot</title>
     <script src="https://code.jquery.com/jquery.js"></script>
 
-    <link 
-    rel="stylesheet" 
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
     <style>
 
@@ -109,16 +105,24 @@
 input.habit {
   width: 200px;
   height: 200px;
-  word-wrap: break-word;
+  white-space: normal;
 }
-    </style>
+
+#habit-tile {
+  display: inline-block;
+}
+
+
+</style>
 
 </head>
+
+
 
 <body>
 
 <div id="logo">
-  <img src="logo.png">
+  <img src="/static/habot.png" height='61' width='190'></img>
 </div>
 
 {% block content %}
