--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <title>habot</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
     <style>
@@ -27,7 +27,7 @@
   vertical-align: middle;
   cursor: pointer;
   border-radius: 50%;
-  border: 1px solid #ffffff;
+  border: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
   background-repeat: no-repeat;
   background-position: center;
