--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,22 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h2>Let's do this, {{ habit.user.name }}!</h2>
-<h2>I've already sent you a few texts. <br>
-    I'll send your first reminder at the time you selected for you to track your success</h2>
-<h4>In the meantime, check out this cool <a href="/dashboard">dashboard</a> that helps you track your streaks<br><br>Text me anytime, even just to let me know how you're doing - I can't wait to hear from you!</h4>
-
-<br><br><br><br><br>
-
-<p>debugging data</p>
-<p>your mobile: {{ habit.user.mobile }} </p>
-<p>habit_id: {{ habit.habit.create_habit_id }} </p>
-<p>your habit: {{ habit.habit.title }} </p>
-<p> timezone: {{ habit.user.tz }} </p>
-
-<p> for our purposes, your time is saved in UTC </p>
-<p> utc hour: {{ habit.utc_time }} 
+<br>
+<br>
 
 
+<div class='container-fluid' align="center" style="height:200px;">
+<h2 id="habot-txt"></h2>
+</div>
+<br>
+<br>
+<br>
+<div class='container-fluid' align="center">
+<a href="/dashboard">your dashboard</a>
+    </div>
+
+</div>
+
+
+
+
+<script>
+
+$('#habot-txt').typeIt({
+    strings: ["You're going to be great!", "I'll be texting you soon.", "In the meantime, check out your dashboard to help track your 3-day streaks."],
+    speed: 50,
+    autoStart: false
+});
+
+</script>
 
 {% endblock %}
+
+Let's do this, 
